src/objects/Universal_Code__c.object
<CustomObject>
    <fields>
        <fullName>Accredible_Credential_Group_Id__c</fullName>
        <description>Points of Group Id in Accredible Credential System</description>
        <label>Accredible Credential Group Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllowsGrading__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allows Grading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cases__c</fullName>
        <label># Cases</label>
        <summaryForeignKey>UC_Case__c.Universal_Code__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <label># Contacts</label>
        <summaryForeignKey>UC_Contact__c.Universal_Code__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DSI__c</fullName>
        <label># DSI</label>
        <summaryForeignKey>UC_DSI__c.Universal_Code__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Education Activity</label>
        <referenceTo>Education_Activity__c</referenceTo>
        <relationshipLabel>Universal Codes</relationshipLabel>
        <relationshipName>Universal_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Topic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Topic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_UCForm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents Rating change on the UC Form as it should be controlled via batch</description>
        <label>Lock UC Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <label># Opportunities</label>
        <summaryForeignKey>UC_Opportunity__c.Universal_Code__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PSE_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSE Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Universal Codes</relationshipLabel>
        <relationshipName>Universal_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Code</label>
        <referenceTo>Universal_Code__c</referenceTo>
        <relationshipLabel>Universal Codes</relationshipLabel>
        <relationshipName>Universal_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Code__c</fullName>
        <label>Sort Code</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>T_Name__c</fullName>
        <formula>RIGHT( Item_Name__c,(LEN( Item_Name__c)-FIND(&quot; &quot;, Item_Name__c, 3)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Topic</label>
        <referenceTo>MC_Topic__c</referenceTo>
        <relationshipLabel>Universal Codes</relationshipLabel>
        <relationshipName>Universal_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Universal Code</label>
    <listViews>
        <fullName>All_UCs</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Group__c</columns>
        <columns>Level__c</columns>
        <columns>Item_Name__c</columns>
        <columns>Code__c</columns>
        <columns>Description__c</columns>
        <columns>Topic__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>thought</value>
        </filters>
        <label>All UCs</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Universal Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Universal Codes</pluralLabel>
    <recordTypes>
        <fullName>Assets</fullName>
        <active>true</active>
        <label>Assets</label>
    </recordTypes>
    <recordTypes>
        <fullName>Capabilities</fullName>
        <active>true</active>
        <label>Capabilities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Competitors</fullName>
        <active>true</active>
        <label>Competitors</label>
    </recordTypes>
    <recordTypes>
        <fullName>Geography</fullName>
        <active>true</active>
        <label>Geography</label>
    </recordTypes>
    <recordTypes>
        <fullName>Products</fullName>
        <active>true</active>
        <label>Products</label>
    </recordTypes>
    <recordTypes>
        <fullName>Programs</fullName>
        <active>true</active>
        <label>Programs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Regulations</fullName>
        <active>true</active>
        <label>Regulations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Services</fullName>
        <active>true</active>
        <label>Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Skills</fullName>
        <active>true</active>
        <label>Skills</label>
    </recordTypes>
    <recordTypes>
        <fullName>Solutions</fullName>
        <active>true</active>
        <label>Solutions</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>